# dual_radar_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  开发笔记.md
doc/: pp部署流程.md  ros_build.md
include/: common.h  radar_alg_main.h
include/msg/: ArbeRadarMsg.h  ArbeRadarPoint.h
msg/: ArbeRadarPoint.msg  Ars548RadarMsg.msg  Ars548RadarPoint.msg
python_tools/: readRadar.ipynb
rviz/: rviz.rviz
src/: camera_node.cpp  file2bag.cpp  lidar_node.cpp  main.cpp  radar_alg_main.cpp  radar_arbe_node.cpp
src/common_lib/: dbscan.cc  dbscan.h  lshape.cc  lshape.h
src/pointpillars/: pointpillars.cc  pointpillars.h  postprocess.cu  postprocess.h
src/pointpillars/cfgs/: pointpillar_arbe.yaml
src/pointpillars_singleHead/: CMakeLists.txt2
src/pointpillars_singleHead/src/: main.cpp
src/pointpillars_singleHead/src/pointpillar/: lidar-postprocess.cu  lidar-postprocess.hpp  pointpillar.cpp
src/pointpillars_singleHead/tool/: build_trt_engine.sh  environment.sh
src/radar_alg/: ego_velocity_estimator.cpp  ego_velocity_estimator.h  radar_alg_main.cpp  radar_alg_main.h
